# python-backend

./: .dockerignore  .gitignore  AGENTS.md  API_IMPLEMENTATION.md  AUTO_DEPLOYMENT_SUMMARY.md  AWS_DEPLOYMENT_GUIDE.md  DEPLOYMENT_ARCHITECTURE_COMPARISON.md  DEPLOYMENT_FLOW_DIAGRAMS.md  DEPLOYMENT_IN_PROGRESS.md  Dockerfile  IMPLEMENTATION_COMPLETE.md  LAMBDA_DEPLOYMENT_GUIDE.md  QUICK_REFERENCE_CARD.md  README.md  TROUBLESHOOTING_OLD_CODE.md  lambda-config.json  pyproject.toml  task-definition.json
.github/workflows/: deploy-lambda.yml
docs/: SETUP_SUMMARY.md
docs/architechture/: ARCHITECTURE_ALIGNMENT.md  DOCKER_NOTES.md  EMAIL_SERVICE_STRUCTURE.md  ONBOARDING_SERVICE_LIVE.md
docs/aws/: AWS_CREDIT_OPTIMIZATION.md  EVENTBRIDGE_GUIDE.md  LAMBDA_AUTO_DEPLOYMENT.md  QUICK_COMMANDS.md  README.md  SNS_SQS_LAMBDA_INTEGRATION.md  SNS_SQS_LAMBDA_READINESS.md
helper/: business_event_publisher.py  business_events.py  domain_events.py  eks_request_middleware.py  email_service.py  event_publisher.py  eventbridge_client.py  log_sampling.py  logging_utils.py  request_context.py  sqs_queue_manager.py  utilities.py
scripts/: README.md  build_onboarding_lambda.sh  ecs_shutdown.py  publish_demo_event.py  setup_eventbridge.sh  setup_lambda_deployment.py  setup_sns_sqs_pipeline.py  shutdown_ecs.sh  startup_ecs.sh
services/email_service/: __init__.py  dependencies.py  handler.py  lambda_function.py  registry.py  requirements.txt  schemas.py
services/onboarding_service/: Dockerfile
src/hello_api/: main.py
tests/: test_hello.py
(+18 files in other folders)
