[project]
name = "hello-world-api"
version = "0.1.0"
description = "Learning backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "httpx>=0.28.0",
]
